en spanhol la wena

--- a/es.html
+++ b/es.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>intro to Node.js / io.js</title>
+    <title>intro a Node.js / io.js</title>
     <meta name="author" content="Fabiano Pereira Soriani">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -38,125 +38,128 @@
 
 
         <section>
-          <h1>Node.js is Scary</h1>
-          <h3>A gentle introduction</h3>
+          <h1>Node.js es espantoso</h1>
+          <h3>Una suave introducción</h3>
           <p>
             <small>
-              Created by <a href="https://twitter.com/flockonus" target="_blank">Fabiano PS</a> April 2015
+              Creado por <a href="https://twitter.com/flockonus" target="_blank">Fabiano PS</a> abril 2015
               <br>
               <br>
               <a href="https://www.axiomzen.co/" target="_blank">Zenhub / AxiomZen</a>
-              <br> Hiring smart, dedicated, self driven, pasionate developers.
             </small>
           </p>
         </section>
 
 
         <section style="clear:both;">
-          <h2>Presenter</h2>
+          <h2>presentador</h2>
           <div style="float:left; width:30%">
             <img src="https://www.axiomzen.co/images/team/fabiano-soriani.jpg"/>
           </div>
           <div style="float:right; width:67%;">
             <ul style="display:table-cell;vertical-align: middle; height: 300px; list-style-type: none;">
-              <li>5y developing web software</li>
-              <li><span style="-webkit-transform: rotate(270deg); display: inline-block; letter-spacing: -2px;">&lt;3</span> Open Web</li>
-              <li>3+ years full time JS</li>
+              <li>desarrollando software 5+ años</li>
+              <li><span style="-webkit-transform: rotate(270deg); display: inline-block; letter-spacing: -2px;">&lt;3</span> OPEN WEB</li>
+              <li>3+ años en Javascript</li>
             </ul>
           </div>
         </section>
 
 
         <section>
-          <h1>Who using?</h1>
+          <h1>utilizando?</h1>
           <div style="text-align: left; padding: 0 16%;">
             <p class="fragment">Zenhub, Walmart, eBay</p>
             <p class="fragment">&nbsp;&nbsp;..Microsoft, Yahoo, Linkedin</p>
             <p class="fragment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;..Uber, Medium +1000s more</p>
             <p class="fragment"></p>
           </div>
-          <a href="http://www.quora.com/What-are-the-biggest-websites-built-with-Node-js-on-the-server-side" target="_blank">See a trendy list</a> or <a href="https://github.com/joyent/node/wiki/Projects,-Applications,-and-Companies-Using-Node" target="_blank">the main one</a>.
+          <a href="http://www.quora.com/What-are-the-biggest-websites-built-with-Node-js-on-the-server-side" target="_blank">Ver una lista trendy</a> o <a href="https://github.com/joyent/node/wiki/Projects,-Applications,-and-Companies-Using-Node" target="_blank">una más completa</a>.
         </section>
 
 
         <section>
-          <h1>Who else?</h1>
-          <p>Downloads using the <a href="http://npm-stat.com/" target="_blank">official package manager</a>:</p>
+          <h2>En el mundo?</h2>
+          <p>Descargas utilizando el gestor oficial del paquete <a href="http://npm-stat.com/" target="_blank">npm</a>:</p>
           <img src="media/npm-history.png" style="min-width: 120%; margin-left: -10%;" />
-          <p><i>no wonder Node.js is called a cancer</i></p>
+          <p><i>Y es por eso que algunos llaman Node.js un cáncer!</i></p>
         </section>
 
 
         <section>
-          <h1>Who job?</h1>
+          <h1>a emplear?</h1>
           <img src="media/jobgraph2.png" />
-          <p>10% of all jobs at <a href="http://www.indeed.com/jobtrends/node.js.html">Indeed</a></p>
+          <p>10% de todos los empleos en <a href="http://www.indeed.com/jobtrends/node.js.html">Indeed</a></p>
         </section>
 
 
         <section>
-          <h1>What?</h1>
-          <blockquote cite="">
-            "Node.js is an open source, cross-platform runtime environment for server-side and networking applications based on <b>Javascript</b> language"
+          <h1>Qué es?</h1>
+          <blockquote cite="" style="width:100%">
+            Node.js es un runtime para <b>Javascript</b>, de código abierto, multiplataforma para aplicaciones de servidor y la creación de software en rede
           </blockquote>
-          <p class="fragment">
-            It's currently popular for creating <b>web servers</b>
-            <br><i>API, website, webapp, real-time, &amp;+</i>
+          <p>
+            Actualmente es popular para la creación de servidores web<br>
+            API, sitio web, webapp, en tiempo real, &amp;+
           </p>
+          <img height="300" src="http://images.boomsbeat.com/data/images/full/24381/cat_1-jpg.jpg?a=1">
         </section>
 
 
         <section>
-          <h2>When?</h2>
+          <h2>cuando?</h2>
           <ul>
-            <li>Born in <b>2009</b> as a hack on top of engine from google chrome (V8)</li>
-            <li>Sponsored and trademarked by Joyent.</li>
-            <li>solid low level APIs</li>
-            <li>outstanding package manager</li>
-            <li>inclusive community</li>
+            <li><b>2009:</b> nació como un hack sobre motor del motor de Chrome (V8)</li>
+            <li>Patrocinado y marca registrada por Joyent</li>
+            <li>excelentes API de bajo nivel</li>
+            <li>destacado gestor de paquetes</li>
+            <li>comunidad inclusiva</li>
           </ul>
         </section>
 
 
         <section>
-          <h1>Nowadays</h1>
+          <h1>hoy en día</h1>
           <p>
             <img src="media/fork.png">
           </p>
           <p>
-            Considerable part of the Node.js community forked the main project from Joyent, and is now publishing a parallel branch with the name of <a href="https://iojs.org/en/index.html">IO.js</a>
+            Parte considerable de la comunidad central de Node.js FORKO el proyecto principal de Joyent, y ahora está publicando una rama paralela con el nombre de <a href="https://iojs.org/en/index.html">IO.js</a>
+          </p>
+          <p>
+            Liberan una nueva versión cada semana por lo que es posiblemente el proyecto más rápida evolución en la historia reciente de código abierto - aunque mi humilde opinión es demasiado.
           </p>
         </section>
 
 
         <section>
-          <h1>Why using?</h1>
-          <p>Recommended when you are:</p>
+          <h1>¿ usarlo ?</h1>
+          <p>Recomendado cuando se encuentre:</p>
           <ul>
-            <li>ok/like Javascript</li>
-            <li>prototyping ideas</li>
+            <li>ok/gusta Javascript</li>
+            <li>Ideas de prototipos</li>
             <li>iterate fast</li>
-            <li>real time apps</li>
-            <li>mobile/web API</li>
-            <li>isomorphic websites</li>
+            <li>aplicaciones en tiempo real</li>
+            <li>API móvil o web</li>
+            <li>isomorphico web</li>
           </ul>
         </section>
 
 
         <section>
-          <h1>Why not?</h1>
-          <p><b>(No Hard Rules)</b> not Recommended for:</p>
-          <ul>
-            <li>you really dislike Javascript</li>
-            <li>when things cannot break (building a bank/rocket/satellite)</li>
-            <li>when you can afford to focus only backend</li>
-            <li>dependency on libraries exclusive for other language</li>
+          <h1>¿ no usarlo ?</h1>
+          <p>(sin reglas estrictas)</p>
+          <ul style="font-size: 90%;">
+            <li>odia JavaScript</li>
+            <li>un sistema de alta fidelidad (banco, nave espacial, satélite)</li>
+            <li>Cuando usted puede permitirse el lujo de centrarse sólo backend</li>
+            <li>dependencia de las bibliotecas exclusivos para otro idioma (pocas hoy día)</li>
           </ul>
         </section>
 
         <section>
-          <h2>How does it look like?</h2>
-          <h3>Example echo server</h3>
+          <h2>Como se ve?</h2>
+          <h3>ejemplo de eco HTTP</h3>
           <pre><code data-trim>
 var express = require('express')
 var app = express()
@@ -171,29 +174,27 @@ function echo(req,res){
 }
 
 app.listen(3000);
-console.log('Express view app listening port 3000');
+console.log('escuchando en puerta 3000');
           </code></pre>
         </section>
 
         <section>
           <h1>How to start?</h1>
           <ol style="line-height: 150%;">
-            <li>Learn the basics at <a href="https://nodejs.org/documentation/">nodejs.org</a> </li>
-            <li>¿ Create an API ? Check <a href="http://koajs.com/">Koa.js</a> </li>
-            <li>¿ Create realtime ? Check <a href="http://socket.io/">Socket.io</a> </li>
-            <li>¿ Laugh? Check <a href="http://nodejsreactions.tumblr.com/">NodeReactions</a> </li>
-            <li>Everything else, Google is your friend!</li>
+            <li>Aprender los conceptos básicos en <a href="https://nodejs.org/documentation/">nodejs.org</a> </li>
+            <li>¿ Crear una API ? Mira <a href="http://koajs.com/">Koa.js</a> </li>
+            <li>¿ Crear app tiempo real ? Mira <a href="http://socket.io/">Socket.io</a> </li>
+            <li>¿ Reírse ? Check <a href="http://nodejsreactions.tumblr.com/">NodeReactions</a> </li>
+            <li>Todo lo demás, Google es tu amigo!</li>
           </ol>
         </section>
 
         <section>
-          <h1>y eso!</h1>
+          <h1>y eso! Questions?</h1>
           <br>
-          <h3>Questions?</h3>
+          <h4><i>Se pregunta si el Node.js es para tu? Hablemos!</i></h4>
           <br>
-          <h4><i>Wondering if Node is for you? Let's talk!</i></h4>
-          <br>
-          <h4><i>AxiomZen is hiring experienced JS developers</i></h4>
+          <h4><i>contratando dedicados, auto impulsado, ingenieros inteligentes, apasionados.</i></h4>
           <aside style="clear:both; text-align: center;">
             <div style="width:32%; float: left;">Contact:</div>
             <div style="width:32%; float: left;"> <a href="mailto:fabiano@axomzen.co">fabiano@axomzen.co</a> </div>
@@ -209,6 +210,9 @@ console.log('Express view app listening port 3000');
 <style type="text/css">
 .present ul li {
   line-height: 200%;
+}
+.reveal h1 {
+  font-size: 2.8em;
 }
 </style>
 
