--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
           <p>
             Considerable part of the Node.js community forked the main project from Joyent, and is now publishing a parallel branch with the name of <a href="https://iojs.org/en/index.html">IO.js</a>
           </p>
+          <p>
+            They release a new version every week making it possibly the fastest evolving project in recent open source history - altho imho it's too much.
+          </p>
         </section>
 
 
