--- a/es.html
+++ b/es.html
@@ -38,7 +38,7 @@
 
 
         <section>
-          <h1>Node.js es espantoso</h1>
+          <h1>Node.js asusta!</h1>
           <h3>Una suave introducción</h3>
           <p>
             <small>
@@ -67,7 +67,7 @@
 
 
         <section>
-          <h1>utilizando?</h1>
+          <h1>quién usa?</h1>
           <div style="text-align: left; padding: 0 16%;">
             <p class="fragment">Zenhub, Walmart, eBay</p>
             <p class="fragment">&nbsp;&nbsp;..Microsoft, Yahoo, Linkedin</p>
@@ -79,7 +79,7 @@
 
 
         <section>
-          <h2>En el mundo?</h2>
+          <h2>quién más?</h2>
           <p>Descargas utilizando el gestor oficial del paquete <a href="http://npm-stat.com/" target="_blank">npm</a>:</p>
           <img src="media/npm-history.png" style="min-width: 120%; margin-left: -10%;" />
           <p><i>Y es por eso que algunos llaman Node.js un cáncer!</i></p>
@@ -87,16 +87,16 @@
 
 
         <section>
-          <h1>a emplear?</h1>
+          <h1>hay pega?</h1>
           <img src="media/jobgraph2.png" />
           <p>10% de todos los empleos en <a href="http://www.indeed.com/jobtrends/node.js.html">Indeed</a></p>
         </section>
 
 
         <section>
-          <h1>Qué es?</h1>
+          <h1>quién es?</h1>
           <blockquote cite="" style="width:100%">
-            Node.js es un runtime para <b>Javascript</b>, de código abierto, multiplataforma para aplicaciones de servidor y la creación de software en rede
+            Node.js es un runtime para <b>Javascript</b>, de código abierto, multiplataforma para aplicaciones de servidor y la creación de software en redes
           </blockquote>
           <p>
             Actualmente es popular para la creación de servidores web<br>
@@ -107,10 +107,10 @@
 
 
         <section>
-          <h2>cuando?</h2>
+          <h2>cuándo?</h2>
           <ul>
-            <li><b>2009:</b> nació como un hack sobre motor del motor de Chrome (V8)</li>
-            <li>Patrocinado y marca registrada por Joyent</li>
+            <li><b>2009:</b> nació como un hack sobre el motor de Chrome (V8)</li>
+            <li>patrocinado y marca registrada por Joyent</li>
             <li>excelentes API de bajo nivel</li>
             <li>destacado gestor de paquetes</li>
             <li>comunidad inclusiva</li>
@@ -124,7 +124,7 @@
             <img src="media/fork.png">
           </p>
           <p>
-            Parte considerable de la comunidad central de Node.js FORKO el proyecto principal de Joyent, y ahora está publicando una rama paralela con el nombre de <a href="https://iojs.org/en/index.html">IO.js</a>
+            Parte considerable de la comunidad central de Node.js forkeo el proyecto principal de Joyent, y ahora está publicando una rama paralela con el nombre de <a href="https://iojs.org/en/index.html">IO.js</a>
           </p>
           <p>
             Liberan una nueva versión cada semana por lo que es posiblemente el proyecto más rápida evolución en la historia reciente de código abierto - aunque mi humilde opinión es demasiado.
@@ -134,7 +134,7 @@
 
         <section>
           <h1>¿ usarlo ?</h1>
-          <p>Recomendado cuando se encuentre:</p>
+          <p>Recomendado usar cuando:</p>
           <ul>
             <li>ok/gusta Javascript</li>
             <li>Ideas de prototipos</li>
@@ -213,6 +213,9 @@ console.log('escuchando en puerta 3000');
 }
 .reveal h1 {
   font-size: 2.8em;
+}
+.reveal a{
+  color: #DAABB1;
 }
 </style>
 
